openshift/invoker.yml
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: invoker
  labels:
    name: invoker
spec:
  replicas: 1
  serviceName: "invoker"
  template:
    metadata:
      labels:
        name: invoker
    spec:
      restartPolicy: Always
      volumes:
      - name: invoker-config
        configMap:
          name: invoker
      serviceAccountName: openwhisk

      containers:
      - name: invoker
        imagePullPolicy: IfNotPresent
        image: projectodd/invoker:openshift-latest
        command: [ "/bin/bash", "-o", "allexport", "/invoker_config/init" ]
        ports:
        - name: invoker
          containerPort: 8080
        resources:
          limits:
            memory: 1Gi
        volumeMounts:
        - name: invoker-config
          mountPath: "/invoker_config"
