openshift/controller.yml
---
apiVersion: v1
kind: Service
metadata:
  name: controller
  labels:
    name: controller
spec:
  selector:
    name: controller
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: controller
  labels:
    name: controller
spec:
  replicas: 1
  serviceName: "controller"
  template:
    metadata:
      labels:
        name: controller
    spec:
      restartPolicy: Always
      containers:
      - name: controller
        imagePullPolicy: IfNotPresent
        image: projectodd/controller:openshift-latest
        command: ["/bin/bash", "-c", "COMPONENT_NAME=$(hostname | cut -d'-' -f2) /init.sh `hostname | cut -d'-' -f2`"]
        ports:
        - name: controller
          containerPort: 8080
        resources:
          limits:
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: "/ping"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/ping"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
          failureThreshold: 5
