openshift/couchdb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    name: couchdb
spec:
  selector:
    name: couchdb
  ports:
    - port: 5984
      targetPort: 5984
      name: couchdb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb
  labels:
    name: couchdb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: couchdb
    spec:
      restartPolicy: Always
      volumes:
      - name: couchdb-data
        emptyDir: {}
      containers:
      - name: couchdb
        imagePullPolicy: IfNotPresent
        image: projectodd/whisk_couchdb:openshift-latest
        command: ["/init.sh"]
        ports:
        - name: couchdb
          containerPort: 5984
        resources:
          limits:
            memory: 1Gi
        volumeMounts:
        - name: couchdb-data
          mountPath: "/opt/couchdb/data"
        readinessProbe:
          httpGet:
            port: 5984
            # Tempting to say "/$(DB_PREFIX)_activations", but probe runs
            # externally, therefore can't access the container environment...
            path: "/test_activations"
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 10
          timeoutSeconds: 1
