openshift/apigateway.yaml
########################################
## API Gateway ConfigMap
########################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: openwhisk
spec:
  ports:
  - name: redis-6379
    port: 6379
  selector:
    app: redis
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: redis
  name: redis
  namespace: openwhisk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      name: redis
    spec:
      containers:
      - image: docker.io/redis:3.2
        name: redis
  triggers: 
    - type: ConfigChange

########################################
# END REDIS Deployment
########################################

########################################
# START OpenWhisk ApiGateway Deployment
########################################
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    name: apigateway
  namespace: openwhisk
spec:
  selector:
    name: apigateway
  ports:
    - port: 8080
      name: mgmt
    - port: 9000
      name: api   
---
apiVersion:  apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: apigateway
  namespace: openwhisk
  labels:
    name: apigateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: apigateway
    spec:
      restartPolicy: Always
      containers:
      - name: apigateway
        imagePullPolicy: IfNotPresent
        image: docker.io/openwhisk/apigateway
        ports:
        - name: mgmt
          containerPort: 8080
        - name: api
          containerPort: 9000
  triggers: 
    - type: ConfigChange

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apigateway
  name: apigateway
  namespace: openwhisk
spec:
  port:
    targetPort: mgmt  
  to:
    kind: Service
    name: apigateway
########################################
# END OpenWhisk ApiGateway  Deployment
########################################
